[project]
name = "semantic-patch-triage-env"
version = "1.0.0"
description = "Semantic Patch Triage OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
server = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
